--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
       .height-100{
         min-height: 100vh;
       }
+      .footer {
+        direction: ltr;
+      }
+      .ouput-size{
+        min-height: 50vh;
+      }
+      .font-weight-light{
+        letter-spacing: 3px;
+      }
       </style>
     <title>hebrecognition</title>
   </head>
