--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         letter-spacing: 3px;
       }
       </style>
-    <title>hebrecognition</title>
+    <title>MiliM - תמלול בזמן אמת</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
